--- a/angular/app/components/user-lists/user-lists.component.html
+++ b/angular/app/components/user-lists/user-lists.component.html
@@ -11,7 +11,7 @@
         <div class="col-md-12">
             <div class="box box-info">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Latest Orders</h3>
+                    <h3 class="box-title">User List</h3>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
                         </button>
