--- a/angular/app/components/forgot-password/forgot-password.component.html
+++ b/angular/app/components/forgot-password/forgot-password.component.html
@@ -1,17 +1,22 @@
-<form ng-submit="vm.submit()" class="ForgotPassword-form">
+<form ng-submit="vm.submit()" class="ForgotPassword-form" name="vm.forgotPasswordForm" novalidate>
     <div class="callout callout-danger" ng-if="vm.errorTrigger">
         <h4>Error:</h4>
         <p>Please check your email and try again.</p>
     </div>
     <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Please enter your email address" ng-model="vm.email">
+        <input type="email" class="form-control" placeholder="Please enter your email address"
+               name="email"
+               ng-model="vm.email"
+               ng-required="true"
+               ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
     </div>
     <div class="row">
-        <div class="col-xs-8">
-        </div>
-        <div class="col-xs-4">
-            <button type="submit" class="btn btn-primary btn-block btn-flat">Submit</button>
+        <div class="col-xs-12">
+            <button type="submit" class="btn btn-primary btn-block btn-flat"
+                    ng-disabled="vm.forgotPasswordForm.$invalid">
+                Submit
+            </button>
         </div>
     </div>
 </form>
