language switch drop down menu

--- a/angular/app/components/nav-header/nav-header.component.html
+++ b/angular/app/components/nav-header/nav-header.component.html
@@ -3,11 +3,40 @@
     <span class="logo-mini"><b>A</b>LT</span>
     <span class="logo-lg"><b>Admin</b>LTE</span>
   </a>
+
   <nav class="navbar navbar-static-top">
+
     <a href="javascript:void(0)" class="sidebar-toggle" data-toggle="offcanvas" role="button">
       <span class="sr-only">Toggle navigation</span>
     </a>
+
+    <!-- language switch  -->
+    <ul class="nav navbar-nav">
+      <li class="dropdown language-menu" uib-dropdown>
+
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle>
+          <i class="fa fa-language"></i>
+          <span class="caret"></span>
+        </a>
+
+        <ul class="dropdown-menu" uib-dropdown-menu>
+          <li>
+            <ul class="menu">
+              <li>
+                <a href="#">Français</a>
+              </li>
+              <li>
+                <a href="#">Anglais</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+      </li>
+    </ul>    
+
     <div class="navbar-custom-menu">
+
       <ul class="nav navbar-nav">
         <li class="dropdown messages-menu" uib-dropdown>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle>
