--- a/angular/material/project.scss
+++ b/angular/material/project.scss
@@ -4,3 +4,52 @@ $grey: #888888;
 $navy: #21455B;
 $border: #E9F0F3;
 $background: #F6F9FA;
+
+
+//Navbar Language dropdown menu
+.navbar-nav > .language-menu {
+  
+  //fix width and padding
+  > .dropdown-menu {
+    > li {
+      position: relative;
+    }
+    width: 165px;
+    //Remove padding and margins
+    padding: 0 0 0 0;
+    margin: 0;
+    top: 100%;
+  }
+  
+  //Clear inner menu padding and margins
+  > .dropdown-menu > li .menu {
+    max-height: 160px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow-x: hidden;
+    > li > a {
+      display: block;
+      white-space: nowrap; /* Prevent text from breaking */
+      border-bottom: 1px solid #f4f4f4;
+
+      color: #444444;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      padding: 10px;
+
+      // Icons inside the menu
+      > .glyphicon,
+      > .fa,
+      > .ion {
+        width: 20px;
+      }
+
+      // Hove state
+      &:hover {
+        background: #f4f4f4;
+        text-decoration: none;
+      }
+    }
+  }
+}
