add angular-flot and flot chart example page

--- a/angular/app/components/nav-sidebar/nav-sidebar.component.html
+++ b/angular/app/components/nav-sidebar/nav-sidebar.component.html
@@ -70,7 +70,7 @@
         <ul class="treeview-menu">
           <li><a ui-sref="app.chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
           <li><a ui-sref="app.comingsoon"><i class="fa fa-circle-o"></i> Morris</a></li>
-          <li><a ui-sref="app.comingsoon"><i class="fa fa-circle-o"></i> Flot</a></li>
+          <li><a ui-sref="app.flot"><i class="fa fa-circle-o"></i> Flot</a></li>
           <li><a ui-sref="app.comingsoon"><i class="fa fa-circle-o"></i> Inline charts</a></li>
         </ul>
       </li>
