--- a/angular/app/pages/layout/layout.page.html
+++ b/angular/app/pages/layout/layout.page.html
@@ -1,5 +1,8 @@
+<div class="wrapper">
 <div ui-view="header"></div>
 <div class="content-wrapper">
     <div ui-view="main"></div>
 </div>
 <div ui-view="footer"></div>
+</div>
+<!-- ./wrapper -->
